err/rltoolbox.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/RLToolbox'...
Listing './lib/python3.5/site-packages/RLToolbox/agent'...
Compiling './lib/python3.5/site-packages/RLToolbox/agent/DQN_agent.py'...
***   File "./lib/python3.5/site-packages/RLToolbox/agent/DQN_agent.py", line 41
    print "path length:%d"%steps
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/RLToolbox/agent/TRPO_agent.py'...
***   File "./lib/python3.5/site-packages/RLToolbox/agent/TRPO_agent.py", line 79
    print "\n********** Iteration %i ************" % iter_num
                                                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/RLToolbox/agent/TRPO_parallel_agent.py'...
***   File "./lib/python3.5/site-packages/RLToolbox/agent/TRPO_parallel_agent.py", line 119
    print "saving checkpoint..."
                               ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/RLToolbox/algorithm'...
Compiling './lib/python3.5/site-packages/RLToolbox/algorithm/TRPO.py'...
***   File "./lib/python3.5/site-packages/RLToolbox/algorithm/TRPO.py", line 85
    print "train paths iterations:%d, batch size:%d" % (train_number , int(n_samples * self.pms.subsample_factor))
                                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/RLToolbox/environment'...
Listing './lib/python3.5/site-packages/RLToolbox/experiment'...
Compiling './lib/python3.5/site-packages/RLToolbox/experiment/trpo_parallel.py'...
***   File "./lib/python3.5/site-packages/RLToolbox/experiment/trpo_parallel.py", line 125
    print "-------- Iteration %d ----------" % iteration
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/RLToolbox/network'...
Compiling './lib/python3.5/site-packages/RLToolbox/network/Vgg16Net.py'...
***   File "./lib/python3.5/site-packages/RLToolbox/network/Vgg16Net.py", line 193
    print "asyc_parameters"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/RLToolbox/network/alexNet'...
Listing './lib/python3.5/site-packages/RLToolbox/network/kaffe'...
Listing './lib/python3.5/site-packages/RLToolbox/network/kaffe/caffe'...
Listing './lib/python3.5/site-packages/RLToolbox/network/kaffe/tensorflow'...
Compiling './lib/python3.5/site-packages/RLToolbox/network/kaffe/tensorflow/network.py'...
***   File "./lib/python3.5/site-packages/RLToolbox/network/kaffe/tensorflow/network.py", line 79
    print "asyc %s success" % var.name
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/RLToolbox/storage'...
Compiling './lib/python3.5/site-packages/RLToolbox/storage/storage_continous_parallel.py'...
***   File "./lib/python3.5/site-packages/RLToolbox/storage/storage_continous_parallel.py", line 66
    print "kill message"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/RLToolbox/storage/storage_continous_parallel_image.py'...
***   File "./lib/python3.5/site-packages/RLToolbox/storage/storage_continous_parallel_image.py", line 61
    print "kill message"
                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/RLToolbox/toolbox'...
Listing './lib/python3.5/site-packages/RLToolbox/toolbox/baseline'...
Listing './lib/python3.5/site-packages/RLToolbox/toolbox/common'...
Listing './lib/python3.5/site-packages/RLToolbox/toolbox/distribution'...
Listing './lib/python3.5/site-packages/RLToolbox/toolbox/logger'...
Listing './lib/python3.5/site-packages/RLToolbox/toolbox/math'...
Compiling './lib/python3.5/site-packages/RLToolbox/toolbox/math/krylov.py'...
***   File "./lib/python3.5/site-packages/RLToolbox/toolbox/math/krylov.py", line 18
    if verbose: print titlestr % ("iter", "residual norm", "soln norm")
                             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/RLToolbox/toolbox/sample'...
Listing './lib/python3.5/site-packages/RLToolbox-2.0.7.egg-info'...
Listing './lib/python3.5/site-packages/RLTracking'...
Compiling './lib/python3.5/site-packages/RLTracking/agent_tracking.py'...
***   File "./lib/python3.5/site-packages/RLTracking/agent_tracking.py", line 14
    print "data image number:%d"%image_number
                               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/RLTracking/environment.py'...
***   File "./lib/python3.5/site-packages/RLTracking/environment.py", line 17
    print self.fc7
             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/RLTracking/test_plot.py'...
***   File "./lib/python3.5/site-packages/RLTracking/test_plot.py", line 53
    print obs.shape
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/RLTracking/trpo_continous.py'...
***   File "./lib/python3.5/site-packages/RLTracking/trpo_continous.py", line 76
    print "asyc parameters"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/RLTracking/trpo_tracking.py'...
***   File "./lib/python3.5/site-packages/RLTracking/trpo_tracking.py", line 73
    print "asyc parameters"
                          ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
